# stack2

./: .clang-format  .clang-tidy  CMakeLists.txt
include/: Stack.h  StackBool.h  stackBool.h
tests/: tests.cpp
